# drone-stm32f4-hal

./: Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain
.cargo/: config
examples/: README.md
examples/exti/: Cargo.toml  exti.code-workspace  flake.nix  layout.toml  rust-toolchain
examples/exti/src/: main.rs  thr.rs
examples/exti/src/tasks/: root.rs
examples/fmc/: Cargo.toml  Drone.toml  Justfile  sdram.ld
examples/fmc/.cargo/: config
examples/fmc/src/: consts.rs  lib.rs  thr.rs
examples/fmc/src/tasks/: root.rs
examples/spi/: Cargo.toml  Justfile
examples/spi/.cargo/: config
examples/spi/src/: consts.rs  lib.rs  thr.rs
examples/spi/src/tasks/: root.rs
examples/tim/: Cargo.toml  Justfile  tim.code-workspace
examples/tim/src/: consts.rs  thr.rs
examples/tim/src/tasks/: root.rs
examples/uart/: Cargo.toml  Drone.toml  Justfile  uart.code-workspace
examples/uart/src/: lib.rs  thr.rs
examples/uart/src/tasks/: root.rs
src/: lib.rs
src/dma/: Cargo.toml  drv.rs  lib.rs
src/dwt/: mod.rs  stopwatch.rs
src/exti/: Cargo.toml  diverged.rs  drv.rs  lib.rs  line.rs  mappings.rs  periph.rs  syscfg.rs
src/exti/mappings/: exti1.rs  mod.rs
src/fmc/: Cargo.toml  drv.rs  lib.rs  mappings.rs  periph.rs  sdrampins.rs  setup.rs
src/gpio/: Cargo.toml  alternate.rs  drv.rs  head.rs  lib.rs  mappings.rs  output.rs  pin.rs  pins.rs
src/gpio/mappings/: abc.rs  d.rs  f.rs  f427_f429.rs  gpioa.rs  gpiob.rs  gpioc.rs  gpiod.rs  gpioe.rs  gpiof.rs  gpiog.rs  gpioh.rs  gpioi.rs  gpioj.rs  gpiok.rs  j.rs  k.rs  mod.rs
src/rcc/: Cargo.toml  clktree.rs  drv.rs  flash.rs  lib.rs  periph.rs  pwr.rs  rcc.rs
src/rcc/diverged/: mod.rs  rcc.rs
src/rcc/traits/: flash.rs  mod.rs  pwr.rs  rcc.rs
src/spi/: Cargo.toml  chipctrl.rs  drv.rs  iface.rs  lib.rs  master.rs  pins.rs  setup.rs
src/spi/diverged/: dma_ch.rs  mod.rs  spi.rs
src/spi/mappings/: f427_f429.rs  mod.rs  spi1.rs  spi2.rs  spi3.rs  spi4.rs  spi5.rs  spi6.rs
src/tim/: Cargo.toml  gen.rs  gen_ch.rs  gen_cnt.rs  gen_ovf.rs  general.rs  lib.rs  shared.rs
src/tim/mappings/: links.rs  mod.rs  tim1.rs  tim10.rs  tim11.rs  tim12.rs  tim13.rs  tim14.rs  tim2.rs  tim3.rs  tim4.rs  tim5.rs  tim6.rs  tim7.rs  tim8.rs  tim9.rs
src/tim/traits/: capture_ch.rs  ch.rs  cnt.rs  compare_ch.rs  dir.rs  link.rs  mod.rs  ovf.rs  tim.rs
src/uart/: Cargo.toml  drv.rs  lib.rs  pins.rs  rx.rs  setup.rs  tx.rs
src/uart/diverged/: dma_ch.rs  mod.rs  uart.rs
src/uart/mappings/: f427_f429.rs  mod.rs  uart10.rs  uart4.rs  uart5.rs  uart7.rs  uart8.rs  uart9.rs  usart1.rs  usart2.rs  usart3.rs  usart6.rs
