cargo-features = ["resolver"]

[workspace]

[package]
name = "exti"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "exti"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]

[dependencies]
drone-core = { version = "0.14.0", path="../../../drone-core" }
drone-cortexm = { version = "0.14.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path="../../../drone-cortexm" }
drone-stm32-map = { version = "0.14.0", features = ["exti", "gpio"], path="../../../drone-stm32-map" }
drone-stm32f4-hal = { version = "0.1.0", features = ["exti", "gpio"], path="../../" }
futures = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
debug = true
panic = "abort"
